# vct-hybrid-voxelization

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md
assets/models/: cornell_box.glb  cube.glb  curve.glb  debug_plane.glb  sphere.glb  sponza.glb  test.glb
src/: gl_timer.rs  gl_utils.rs  gpu_model.rs  main.rs  old_main.rs  renderer.rs  renderer_utils.rs  textures.rs  vulkan_app.rs
src/passes/: triangle.rs
src/scene/: camera.rs  light.rs  material.rs  mod.rs  model.rs
src/shaders/: classify.frag  classify.geom  classify.vert  clear_volume.vert  depth_pass.vert  mipmap.comp  pbr.frag  pbr.fs  pbr.vert  pbr.vs  radiance_injection.comp  shared.glsl  triangle.frag  triangle.fs  triangle.vert  triangle.vs  volume_bounds.frag  volume_bounds.vert  voxel_view.frag  voxel_view.geom  voxel_view.vert  voxelize.frag  voxelize.geom  voxelize.vert
