[package]
name = "lunar-renderer"
version = "0.1.0"
authors = ["khskarl <karllhenning64@gmail.com>"]
edition = "2018"

[features]
default = ["vulkan"]
metal = ["rendy/metal"]
dx12 = ["rendy/dx12"]
vulkan = ["rendy/vulkan"]

[dependencies]
lazy_static = "1.3.0"
env_logger = "0.6.1"
log = "0.4.6"
failure = "0.1.5"
nalgebra-glm = "0.4.0"
genmesh = "0.6.2"
image = "0.22.0"
gltf = "0.13.0"

[dependencies.rendy]
version = "0.3"
features = ["texture-image"]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false