[package]
name = "lunar-renderer"
version = "0.1.0"
authors = ["khskarl <karllhenning64@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
env_logger = "0.6.1"
log = "0.4.6"
failure = "0.1.5"
nalgebra-glm = "0.4.0"
genmesh = "0.6.2"
image = "0.19.0"
gltf = "0.13.0"
gl = "0.13.0"
gl_helpers = { git = "https://gitlab.com/khskarl/rs-gl_helpers.git" }
glutin = "0.22.0-alpha3"

[dependencies.img_hash]
version = "2.0"
features = ["rust-image"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

