[package]
name = "lunar-renderer"
version = "0.1.0"
authors = ["khskarl <karllhenning64@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
env_logger = "0.6.1"
log = "0.4.6"
failure = "0.1.5"
nalgebra-glm = "0.4.0"
genmesh = "0.6.2"
image = "0.19.0"
gltf = "0.13.0"
gl = "0.13.0"
glsl-include = "0.3"
gl_helpers = { path = "../rs-gl_helpers" }
# gl_helpers = { git = "https://gitlab.com/khskarl/rs-gl_helpers.git" }
glutin = "0.22.0-alpha3"
imgui = "0.2"
imgui-gfx-renderer = "0.2"
imgui-opengl-renderer = "0.6.0"

[dependencies.imgui-winit-support]
version = "0.2.1"
default-features = false
features = ["winit-20"]

[dependencies.img_hash]
version = "2.0"
features = ["rust-image"]

[features]
opengl = ["imgui-gfx-renderer/opengl"]
default = ["opengl"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

